compose fix with actuator